tests/053_type_checks_2.err
pirxc compilation failed: exit status 1
Output: tests/053_type_checks_2.pirx:1:1: error in struct declaration: type Inner is not fully defined
Error: exit status 1
