tests/053_type_checks_2.pirx
struct Outer {
  inner: Inner;
}

struct Inner {
  value: int;
}

extern func main(): int {
  var o: Outer;
  return 0;
}
